RESOLVED FIXED181511
On macOS, getBoundingClientRect gives incorrect values when pinch-zoomed
https://bugs.webkit.org/show_bug.cgi?id=181511
Summary On macOS, getBoundingClientRect gives incorrect values when pinch-zoomed
Simon Fraser (smfr)
Reported 2018-01-10 18:05:23 PST
On macOS, getBoundingClientRect gives incorrect values when pinch-zoomed
Attachments
Patch (18.50 KB, patch)
2018-01-10 18:07 PST, Simon Fraser (smfr)
zalan: review+
ews-watchlist: commit-queue-
Archive of layout-test-results from ews101 for mac-sierra (2.21 MB, application/zip)
2018-01-10 21:24 PST, EWS Watchlist
no flags
Archive of layout-test-results from ews116 for mac-sierra (3.20 MB, application/zip)
2018-01-10 22:05 PST, EWS Watchlist
no flags
Archive of layout-test-results from ews104 for mac-sierra-wk2 (3.08 MB, application/zip)
2018-01-10 22:42 PST, EWS Watchlist
no flags
Simon Fraser (smfr)
Comment 1 2018-01-10 18:07:52 PST
Simon Fraser (smfr)
Comment 2 2018-01-10 18:08:19 PST
alan
Comment 3 2018-01-10 18:17:29 PST
Comment on attachment 331003 [details] Patch as long as it fixes index.hu
EWS Watchlist
Comment 4 2018-01-10 21:24:13 PST
Comment on attachment 331003 [details] Patch Attachment 331003 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/6029668 New failing tests: fast/zooming/client-rect-in-fixed-zoomed.html
EWS Watchlist
Comment 5 2018-01-10 21:24:14 PST
Created attachment 331025 [details] Archive of layout-test-results from ews101 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 6 2018-01-10 22:05:49 PST
Comment on attachment 331003 [details] Patch Attachment 331003 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/6029831 New failing tests: fast/zooming/client-rect-in-fixed-zoomed.html
EWS Watchlist
Comment 7 2018-01-10 22:05:51 PST
Created attachment 331028 [details] Archive of layout-test-results from ews116 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews116 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 8 2018-01-10 22:42:54 PST
Comment on attachment 331003 [details] Patch Attachment 331003 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/6030335 New failing tests: http/tests/workers/service/postmessage-after-sw-process-crash.https.html fast/zooming/client-rect-in-fixed-zoomed.html
EWS Watchlist
Comment 9 2018-01-10 22:42:56 PST
Created attachment 331032 [details] Archive of layout-test-results from ews104 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
Simon Fraser (smfr)
Comment 10 2018-01-11 11:53:29 PST
Note You need to log in before you can comment on or make changes to this bug.